# Smart_Agriculture

./: dockerfile  env.py  grader.py  inference.py  models.py  openenv .yaml  pyproject.toml  requirements.txt  run_baseline.py  tasks.py
server/: app.py
