[project]
name = "smart-agriculture-env"
version = "0.1.0"
description = "Smart Agriculture OpenEnv environment"
authors = [{name = "Sai Ram"}]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openenv>=0.2.0"
]

[project.scripts]
server = "server.app:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
